--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "gsap": "^3.11.5",
     "heroicons": "^2.0.17",
     "next": "13.3.0",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
