--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@next/font": "^13.4.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
@@ -17,10 +19,14 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "gsap": "^3.11.5",
-    "next": "13.3.0",
+    "heroicons": "^2.0.17",
+    "next": "^13.3.0",
+    "next-themes": "^0.2.1",
+    "nookies": "^2.5.2",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
