--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^1.0.6",
+    "@hookform/resolvers": "^3.1.0",
+    "@mui/material": "^5.13.0",
+    "@next/font": "^13.4.1",
+    "@sendgrid/mail": "^7.7.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
@@ -17,11 +24,22 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "gsap": "^3.11.5",
-    "next": "13.3.0",
+    "heroicons": "^2.0.17",
+    "next": "^13.3.0",
+    "next-themes": "^0.2.1",
+    "nookies": "^2.5.2",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha-v3": "^1.10.1",
+    "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
+    "react-query": "^3.39.3",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/react-query": "^1.2.9"
   }
 }
