--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@mui/material": "^5.13.0",
     "@next/font": "^13.4.1",
+    "@prisma/client": "^4.14.1",
     "@sendgrid/mail": "^7.7.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
@@ -41,6 +42,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/react-query": "^1.2.9"
+    "@types/react-query": "^1.2.9",
+    "prisma": "^4.14.1"
   }
 }
