--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
     "@next/font": "^13.4.1",
     "@prisma/client": "^4.14.1",
     "@sendgrid/mail": "^7.7.0",
+    "@tremor/react": "^2.8.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "daisyui": "^2.51.5",
     "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
+    "eslint-config-next": "^13.4.4",
     "gsap": "^3.11.5",
     "heroicons": "^2.0.17",
-    "next": "^13.3.0",
+    "next": "^13.4.4",
     "next-themes": "^0.2.1",
     "nookies": "^2.5.2",
     "postcss": "8.4.22",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
@@ -42,6 +43,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@prisma/studio": "^0.484.0",
     "@types/react-query": "^1.2.9",
     "prisma": "^4.14.1"
   }
