--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.22.3",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^1.0.6",
@@ -22,12 +23,16 @@
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "daisyui": "^2.51.5",
     "eslint": "8.38.0",
-    "eslint-config-next": "^13.4.4",
+    "eslint-config-next": "^13.4.3",
     "gsap": "^3.11.5",
     "heroicons": "^2.0.17",
-    "next": "^13.4.4",
+    "jsonwebtoken": "^9.0.0",
+    "next": "^13.4.3",
+    "next-auth": "^4.22.1",
+    "next-auth-client": "^1.5.0",
     "next-themes": "^0.2.1",
     "nookies": "^2.5.2",
     "postcss": "8.4.22",
@@ -43,7 +48,11 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.2",
+    "@babel/preset-env": "^7.22.2",
     "@prisma/studio": "^0.484.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react-query": "^1.2.9",
     "prisma": "^4.14.1"
   }
