--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "bcrypt": "^5.1.0",
     "daisyui": "^2.51.5",
     "eslint": "8.38.0",
-    "eslint-config-next": "^13.4.3",
+    "eslint-config-next": "^13.4.8",
     "gsap": "^3.11.5",
     "heroicons": "^2.0.17",
     "jsonwebtoken": "^9.0.0",
-    "next": "^13.4.7",
+    "next": "^13.4.8",
     "next-auth": "^4.22.1",
     "next-auth-client": "^1.5.0",
     "next-themes": "^0.2.1",
@@ -54,6 +54,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/react-query": "^1.2.9",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.14.1"
   }
 }
