--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nookies": "^2.5.2",
     "postcss": "8.4.22",
     "react": "^18.2.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.43.9",
