--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^3.1.0",
     "@mui/material": "^5.13.0",
-    "@prisma/client": "^4.14.1",
     "@sendgrid/mail": "^7.7.0",
     "@tremor/react": "^2.8.3",
     "@types/node": "18.15.11",
@@ -25,6 +24,7 @@
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "daisyui": "^2.51.5",
+    "dynamodb-toolbox": "^0.9.2",
     "eslint": "8.38.0",
     "eslint-config-next": "^13.4.8",
     "gsap": "^3.11.5",
@@ -46,17 +46,17 @@
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
+    "uuid": "^9.0.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.22.2",
     "@babel/preset-env": "^7.22.2",
-    "@prisma/studio": "^0.484.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/react-query": "^1.2.9",
+    "@types/uuid": "^9.0.7",
     "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.14.1"
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
